# pbf

./: .oxlintrc.json  Cargo.toml  LICENSE.md  README.md  bacon.toml  bun.lockb  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: 2-bug-report.md  3-feature-request.md
.github/workflows/: coveralls.yml  pages.yml
rust/: Cargo.toml
rust-derive/: Cargo.toml  read.rs  write.rs
src/: index.ts
