[workspace]
members = ["rust", "rust-core", "rust-derive"]
default-members = ["rust"]
resolver = "2"

[workspace.package]
version = "1.22.1"
rust-version = "1.91.0"
edition = "2024"
authors = ["Craig O'Connor <oconnorct1@gmail.com>"]
description = "Mininmal protobuffer module; Build your own glue."
documentation = "https://docs.rs/pbf"
homepage = "https://github.com/OpenS2/pbf"
repository = "https://github.com/OpenS2/pbf"
readme = "README.md"
categories = ["encoding", "wasm", "embedded", "no-std"]
keywords = ["pbf", "protobuffers", "minimal", "low-cost-code"]
license = "MIT"

[workspace.dependencies]
pbf-core = { path = "rust-core", version = "1.22.1" }
pbf-derive = { path = "rust-derive", version = "1.22.1" }

[profile.bench]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
