[package]
name = "pbf-derive"
publish = true
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
# LOCAL
pbf-core = { workspace = true }
# EXTERNAL
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["derive"] }
proc-macro-crate = "3.3"
darling = "0.23"

[dev-dependencies]

[lib]
proc-macro = true
name = "pbf_derive"
path = "lib.rs"
bench = true
