[package]
name = "pbf"
publish = true
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
# Include only specific files and directories
# include = ["rust/**", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]
exclude = [
  "/assets",
  "/coverage",
  "/benchmarks",
  "/dist",
  "/node_modules",
  "/target",
  "/docs",
  "/tests",
  "/tools",
  "/src",
]

[lib]
name = "pbf"
path = "lib.rs"
bench = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["derive"]
derive = ["pbf-derive"]

[dependencies]
pbf-core = { workspace = true }
pbf-derive = { workspace = true, optional = true }

[dev-dependencies]
# tarpaulin = "*"

[profile.bench]
opt-level = 3
